z-index issues remains

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -58,9 +58,9 @@ background: #ff0;
 }
 
 #menuLogin .dropdown-toggle, ul, li {
-    background-color: red !important;
+    background-color: white !important;
     position:relative;
-    z-index: 9999 !important;
+    z-index: 999 !important;
 
 }
 
